# hermes

./: CMakeLists.txt
hermes2d/: CMakeLists.txt
hermes2d/test_examples/: CMakeLists.txt
hermes2d/test_examples/06-system-adapt/: main.cpp
hermes2d/test_examples/08-nonlinearity/: main.cpp
hermes2d/test_examples/3-07-navier-stokes/: definitions.cpp  main.cpp
hermes2d/test_examples/A-adaptivity/: CMakeLists.txt  cg.h  definitions.cpp  gmres.h  iml_wrappers.h  main.cpp  mycg.cpp  mycg.h
hermes2d/test_examples/A-cidlo/: CMakeLists.txt  cidlo.a2d  definitions.cpp  definitions.h  discretization.cpp  discretization.h  main.cpp  mesh_cidlo.msh  mesh_simple.msh  mesh_unit_square.msh  mesh_unit_square_divided.msh  plot_graph.py  problem.h  run
hermes2d/test_examples/A-electrostatic-simple/: CMakeLists.txt  main.cpp
hermes2d/test_examples/A-nonlinearity/: CMakeLists.txt  main.cpp
hermes2d/test_examples/B-electrostatic-adapt/: CMakeLists.txt  aa-electrostatic-ctverec-triangle-linear.xml  definitions.cpp  definitions.h  main.cpp
hermes2d/test_examples/C-subdomains/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  problem.xml
hermes2d/test_examples/D-subdomains-multi/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  problem-multi.xml  problem-traverse.xml
hermes2d/test_examples/E-singlemesh/: CMakeLists.txt  bad_ori.xml  definitions.cpp  main.cpp
hermes2d/test_examples/F-navier-stokes/: CMakeLists.txt  definitions.cpp  main.cpp  mesh_agros.xml  mesh_agros_quad.xml
hermes2d/test_examples/example-interpolation/: CMakeLists.txt  main.cpp
(+27 files in other folders)
